fix vertical overflow

--- a/main.scss
+++ b/main.scss
@@ -17,6 +17,11 @@ body {
 	display: grid;
 	box-sizing: border-box;
 	font-family: Verdana, Geneva, sans-serif;
+	overflow-y: visible;
+}
+
+html {
+	overflow-y: hidden;
 }
 
 *,
@@ -51,72 +56,6 @@ a {
 	}
 }
 
-// .app {
-// 	.content {
-// 		width: 67%;
-// 		margin: 0 auto;
-// 		> * {
-// 			margin: $spacing auto;
-// 			display: block;
-// 		}
-// 		> img {
-// 			width: 100%;
-// 		}
-// 	}
-// 	.pages {
-// 		// border: 1px solid red;
-// 		display: flex;
-// 		flex-direction: column;
-// 		width: 100%;
-// 		padding: $spacing/2;
-// 		> * {
-// 			// border: 3px solid map-get($colors, pink);
-// 			margin: $spacing/2;
-// 			padding: 10px;
-// 			width: 66%;
-// 			min-height: 30em;
-// 			position: relative;
-// 			color: white;
-// 			height: 1vh;
-
-// 			& > h1 {
-// 				font-size: 4em;
-// 			}
-
-// 			&:after {
-// 				content: '';
-// 				display: block;
-// 				position: relative;
-// 				// top: 100%;
-// 				height: 300px;
-// 				width: 100%;
-// 				// border: 1px solid orange;
-// 			}
-
-// 			@for $i from 0 to 15 {
-// 				&:nth-child(#{$i}):after {
-// 					background-image: url('./images/sarsons-to-be/#{$i}.jpeg');
-// 					background-size: contain;
-// 					background-repeat: no-repeat;
-// 					background-position: left;
-// 				}
-// 			}
-
-// 			// $rule: ':nth-child(2n)';
-// 			// &#{$rule}:after {
-// 			// 	right: 100%;
-// 			// }
-// 			// &:not(#{$rule}):after {
-// 			// 	left: 100%;
-// 			// }
-
-// 			// &:nth-child(2n) {
-// 			// 	margin-left: auto;
-// 			// }
-// 		}
-// 	}
-// }
-
 .hidable {
 	opacity: 1;
 	&[data-hide='true'] {
@@ -126,15 +65,3 @@ a {
 		}
 	}
 }
-
-// .footer {
-// 	position: fixed;
-// 	display: flex;
-// 	padding: $spacing/2;
-// 	width: 100%;
-// 	bottom: 0;
-// 	background: pink;
-// 	> * {
-// 		margin: $spacing/2;
-// 	}
-// }
